--- a/Lalisa-page/assets/scss/main.scss
+++ b/Lalisa-page/assets/scss/main.scss
@@ -46,7 +46,8 @@
     margin-bottom: 30px;
     background-image:  url("../img/vector_title_banner.png");
     background-repeat: no-repeat;
-    background-position: right bottom;
+    background-position: right 77%;
+    background-size: 10%;
 }
 
 .banner_des {
@@ -129,6 +130,7 @@
     padding: 26px 24px;
     background: #FFFFFF;
     box-shadow: 0px 4px 100px rgba(175, 173, 181, 0.1);
+    margin-right: 29px;
 
     .title_benefit {
         margin-top: 24px;
@@ -215,20 +217,23 @@
     } 
 }
 
-.slick-prev, 
-.slick-next {
-    z-index: 1;
-    width: 40px;
-    height: 40px;
+.small_box_product {
+    .slick-prev, 
+    .slick-next {
+        z-index: 1;
+        width: 40px;
+        height: 40px;
+    }
+
+    .slick-next {
+        right: 62px;
+    }
+
+    .slick-prev {
+        left: 62px;
+    } 
 }
 
-.slick-next {
-    right: 62px;
-}
-
-.slick-prev {
-    left: 62px;
-} 
      
 
 
@@ -275,7 +280,7 @@
         img {
             height: 100%;
             width: 100%;
-            object-fit: contain;
+            object-fit: fill;
         }
     }
 }
@@ -314,7 +319,7 @@
     img {
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: cover;
     }
 }
 
@@ -357,22 +362,38 @@
     display: flex;
     align-items: center;
     margin-top: 26px;
+    justify-content: space-between;
 
-    .avatar {
-        width: 50px;
-        height: 50px;
-        overflow: hidden; 
-        margin-right: 14px;
-        
-        img {
-            width: 100%;
+    .info {
+        display: flex;
+        align-items: center;
+
+        .avatar {
+            width: 50px;
+            height: 50px;
+            overflow: hidden; 
+            margin-right: 14px;
+            
+            img {
+                width: 100%;
+            }
+        }
+    
+        .name {
+            
+            .title_text {
+                font-size: 20px;
+                white-space: nowrap;
+            }
         }
     }
 
-    .name {
-        
+    .evaluate {
+        display: flex;
+        align-items: center;
+
         .title_text {
-            font-size: 20px;
+            font-size: 18px;
         }
     }
 }
@@ -410,12 +431,12 @@
 }
 
 .box_feature_img {
+    position: relative;
 
     .feature_photo {
         width: 100%;
         max-height: 565px;
         overflow: hidden;
-        position: relative;
 
         img {
             width: 100%;
@@ -425,26 +446,14 @@
         }
     }
 
-    .box_button {
-        box-shadow: 0px 4px 90px rgba(175, 173, 181, 0.2);
-        position: absolute;
-        right: 15px;
-
-        .btn_group {
-            
-
-            &:nth-child(1) {
-                background: #FFFFFF;
-            }
-        }
-    }
+   
 }
 
 .box_title_articles {
-    position: absolute;
+    position: absolute !important;
     bottom: 100px;
-    left: 40px;
-    
+    padding-left: 25px;
+
     .cate_articles {
 
         .description_text {
@@ -465,6 +474,8 @@
     .detail_articles {
         margin-top: 6px;
         padding: 0px 72px 0px 0px;
+        max-width: 530px;
+
 
         .description_text {
             overflow: hidden;
@@ -486,6 +497,32 @@
     }
     
 }
+
+.image {
+    margin-bottom: 31px;
+}
+
+
+.box_button {
+    box-shadow: 0px 4px 90px rgba(175, 173, 181, 0.2);
+    position: absolute;
+    right: 15px;
+    bottom: 0px;
+    display: flex;
+
+    .btn_group {
+        width: 50%;
+
+        &:nth-child(1) {
+            background: #FFFFFF;
+        }
+    }
+}
+    
+
+
+
+
 
 .box_blog {
     display: flex;
@@ -514,12 +551,8 @@
 }
 
 .detail_blog {
-    margin-left: 50px;
+    margin-left: 20px;
     flex-shrink: 1;
-
-    .cate_blog {
-
-    }
 
     .name_blog {
         margin-top: 21px;
@@ -559,6 +592,7 @@
         .title_text {
             font-size: 14px;
             margin-right: 24px;
+            white-space: nowrap;
         }
 
         .description_text {
@@ -589,7 +623,6 @@
     }
     
     .product_numb {
-        margin-top: 100px;
 
         .box_archivement {
             display: none;
@@ -607,9 +640,12 @@
     .box_title_articles {
         bottom: 20px;
     }
+
     .small_list_blog {
-        margin-top: 50px;
+        margin-top: 20px;
     }
+
+   
 }   
  
 
@@ -630,6 +666,21 @@
     }
 
     //////Css for title and description ///
+    .block_banner {
+        margin-top: 50px;
+    }
+    
+    .banner_des {
+        margin-bottom: 30px;
+    }
+
+    .block_benefits, 
+    .block_product, 
+    .block_our_product, 
+    .block_testimonials, 
+    .block_artickes {
+        margin-top: 100px;
+    }
 
     //////////////////Start: Banner ///////
     
@@ -675,14 +726,32 @@
 
     
     ////////////Start: Article/////////////
+    .box_button {
+        display: none;
+    }
 
-    .box_feature_img {
+    .name_blog {
 
-        .box_button {
+        .title_text {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+    }
+
+    .author_blog{
+
+        .date_create {
+            display: none;
+        }
+
+        .content_blog {
             display: none;
         }
     }
 
+    
     ////////////End: Article/////////////////
     
 
@@ -706,11 +775,10 @@
 @media screen and (max-width: 767px) {
     
     //////////////Blog///////////
-    .author_blog{
+    
 
-        .date_create {
-            display: none;
-        }
+    .box_benefit {
+        margin-top: 20px;
     }
 
     //////////Articles/////////////
@@ -722,11 +790,18 @@
         }
     }
 
-  
+    .detail_blog {
+        margin-left: 14px;
 
-    
+        .name_blog {
+            margin-top: 4px;
+        }
 
-    
+        .author_blog{
+            margin-top: 18px;
+        }
+
+    }
 }
 
 @media screen and (max-width:599px) {
@@ -752,14 +827,14 @@
         padding: 20px 0;
     }
 
-    .block_banner, 
-    .block_benefits, 
-    .block_product, 
-    .block_our_product, 
-    .block_testimonials, 
-    .block_artickes {
-        margin-top: 50px;
-    }
+    // .block_banner, 
+    // .block_benefits, 
+    // .block_product, 
+    // .block_our_product, 
+    // .block_testimonials, 
+    // .block_artickes {
+    //     margin-top: 50px;
+    // }
 
 
     .box_banner_text {
@@ -838,6 +913,31 @@
         }
     }
 
+    .info_valuer {
+
+        .info {
+
+            .name {
+
+                .title_text {
+                    font-size: 14px;
+                }
+            }
+
+            .avatar {
+                width: 28px;
+                height: 28px;
+            }
+        }
+
+        .evaluate {
+
+            .title_text {
+                font-size: 14px;
+            }
+        }
+    }
+    
 
 
     ///////////Blog///////////////
@@ -850,9 +950,7 @@
             }
         }
 
-        .content_blog {
-            display: none;
-        }
+        
         
         .name_blog {
             margin-top: 4px;
