--- a/Lalisa-page/assets/scss/product.scss
+++ b/Lalisa-page/assets/scss/product.scss
@@ -277,7 +277,10 @@
     }
 
     .page-link {
+        font-family: 'Eudoxus Sans';
         color: #151411;
+        font-weight: 500;
+        font-size: 18px;
     }
 }
 
