--- a/Lalisa-page/assets/css/product.css
+++ b/Lalisa-page/assets/css/product.css
@@ -7,14 +7,25 @@
   src: url("/assets/fonts/slick.ttf");
 }
 .block_header {
-  padding: 30px 0px;
   border-bottom: 2px solid #F3F3F3;
   position: sticky;
   top: 0;
 }
 
+.navbar {
+  padding: 0;
+}
+
 li.nav-item {
   margin-right: 60px;
+  padding: 30px 0px;
+}
+
+.page_landing {
+  border-bottom: 3px solid #518581;
+}
+.page_landing .nav-link {
+  color: #518581 !important;
 }
 
 li.nav-item .nav-link {
@@ -78,6 +89,7 @@ a:hover {
 
 .box_services {
   display: flex;
+  justify-content: space-around;
 }
 .box_services .detial_service {
   margin-left: 104px;
@@ -124,7 +136,7 @@ a:hover {
     padding-left: 15px;
   }
   .box_services .detial_service {
-    margin-right: 10%;
+    margin-right: 3%;
     margin-left: 0px !important;
   }
   .box_services .detial_service .title_text {
@@ -349,7 +361,10 @@ a:hover {
   color: #FFFFFF;
 }
 .pagination .page-link {
+  font-family: "Eudoxus Sans";
   color: #151411;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 767px) {
