--- a/Lalisa-page/assets/scss/header.scss
+++ b/Lalisa-page/assets/scss/header.scss
@@ -1,12 +1,24 @@
 .block_header {
-    padding: 30px 0px;
     border-bottom: 2px solid #F3F3F3;
     position: sticky;
     top: 0;
 }
 
+.navbar {
+    padding: 0;
+}
+
 li.nav-item {
     margin-right: 60px;
+    padding: 30px 0px;
+}
+
+.page_landing {
+    border-bottom: 3px solid #518581;
+
+    .nav-link {
+        color: #518581 !important;
+    }
 }
 
 li.nav-item .nav-link {
