--- a/Lalisa-page/views/index.html
+++ b/Lalisa-page/views/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lalasia</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
-    <link rel="stylesheet" href="./assets/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/slick.css">
-    <link rel="stylesheet" href="./assets/css/slick-theme.css">
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/slick.css">
+    <link rel="stylesheet" href="../assets/css/slick-theme.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" /> -->
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/index.css">
 
 </head>
 
@@ -21,9 +21,9 @@
         <div class="block_header">
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand" href="index.html"><img src="./assets/img/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="../assets/img/logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><img src="./assets/img/menu.png" alt=""></span>
+                        <span class="navbar-toggler-icon"><img src="../assets/img/menu.png" alt=""></span>
                     </button>
                     
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -44,10 +44,10 @@
                         <div class="my-2 my-lg-0">
                             <div class="options_navbar">
                                 <a class="icon_option" href="">
-                                    <img src="./assets/img/cart.png" alt="">
+                                    <img src="../assets/img/cart.png" alt="">
                                 </a>
                                 <a class="icon_option" href="">
-                                    <img src="./assets/img/user.png" alt="">
+                                    <img src="../assets/img/user.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="banner_search">
                         <div class="search_icon">
-                            <img src="./assets/img/search_icon.png" alt="">
+                            <img src="../assets/img/search_icon.png" alt="">
                         </div>
                         <div class="input-group">
                             <input type="search" class="form-control rounded" placeholder="Search property"
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="box_banner_photo">
-                    <img src="./assets/img/banner_picture.png" alt="">
+                    <img src="../assets/img/banner_picture.png" alt="">
                 </div>
             </div>
         </section>
@@ -118,7 +118,7 @@
                         <div class="col-md-4">
                             <div class="box_benefit">
                                 <div class="icon_benefit">
-                                    <img src="./assets/img/manychoices.png" alt="Choices Pic">
+                                    <img src="../assets/img/manychoices.png" alt="Choices Pic">
                                 </div>
                                 <div class="title_benefit">
                                     <p class="title_text title_list_benefit">Many Choices</p>
@@ -132,7 +132,7 @@
                         <div class="col-md-4">
                             <div class="box_benefit">
                                 <div class="icon_benefit">
-                                    <img src="./assets/img/fot.png" alt="Fast and On Time">
+                                    <img src="../assets/img/fot.png" alt="Fast and On Time">
                                 </div>
                                 <div class="title_benefit">
                                     <p class="title_text title_list_benefit">Fast and On Time</p>
@@ -146,7 +146,7 @@
                         <div class="col-md-4">
                             <div class="box_benefit">
                                 <div class="icon_benefit">
-                                    <img src="./assets/img/affor_price.png" alt="Affordable Price">
+                                    <img src="../assets/img/affor_price.png" alt="Affordable Price">
                                 </div>
                                 <div class="title_benefit">
                                     <p class="title_text title_list_benefit">Affordable Price</p>
@@ -184,7 +184,7 @@
                 <div class="small_box_product">
                     <div class="box_product">
                         <div class="product_picture">
-                            <img src="./assets/img/product_demo3.png" alt="Product">
+                            <img src="../assets/img/product_demo3.png" alt="Product">
                         </div>
                         <div class="cate_product">
                             <a href=""><p class="description_text">Cupboard </p></a>
@@ -202,7 +202,7 @@
 
                     <div class="box_product">
                         <div class="product_picture">
-                            <img src="./assets/img/product_demo1.png" alt="Product">
+                            <img src="../assets/img/product_demo1.png" alt="Product">
                         </div>
                         <div class="cate_product">
                             <a href=""><p class="description_text">Chair</p></a>
@@ -220,7 +220,7 @@
 
                     <div class="box_product">
                         <div class="product_picture">
-                            <img src="./assets/img/product_demo2.png" alt="Product">
+                            <img src="../assets/img/product_demo2.png" alt="Product">
                         </div>
                         <div class="cate_product">
                             <a href=""><p class="description_text">Lamp</p></a>
@@ -238,7 +238,7 @@
 
                     <div class="box_product">
                         <div class="product_picture">
-                            <img src="./assets/img/product_demo4.png" alt="Product">
+                            <img src="../assets/img/product_demo4.png" alt="Product">
                         </div>
                         <div class="cate_product">
                             <a href=""><p class="description_text">Sofa</p</a>
@@ -310,7 +310,7 @@
                             </div>
     
                             <div class="feature_img">
-                                <img src="./assets/img/feauture_img.png" alt="">
+                                <img src="../assets/img/feauture_img.png" alt="">
                             </div>
                         </div>
                         <div class="col-xl-6 product_numb">
@@ -341,7 +341,7 @@
                                 </div>
                             </div>
                             <div class="archive_img">
-                                <img src="./assets/img/feauture_img2.png" alt="">
+                                <img src="../assets/img/feauture_img2.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -372,7 +372,7 @@
                     <div class="col-md-4">
                         <div class="box_detail_testi">
                             <div class="icon_testi">
-                                <img src="./assets/img/icon_testi.png" alt="">
+                                <img src="../assets/img/icon_testi.png" alt="">
                             </div>
                             <div class="content_testi">
                                 <p class="description_text">Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non. </p>
@@ -380,7 +380,7 @@
                             <div class="info_valuer">
                                 <div class="info">
                                     <div class="avatar">
-                                        <img src="./assets/img/avatar_valuer.png" alt="">
+                                        <img src="../assets/img/avatar_valuer.png" alt="">
                                     </div>
                                     <div class="name">
                                         <p class="title_text">Janne Cooper</p>
@@ -388,7 +388,7 @@
                                 </div>
                                 <div class="evaluate">
                                     <div class="icon">
-                                        <img src="./assets/img/star.png" alt="">
+                                        <img src="../assets/img/star.png" alt="">
                                     </div>
                                     <p class="title_text">4.3</p>
                                 </div>
@@ -398,7 +398,7 @@
                     <div class="col-md-4">
                         <div class="box_detail_testi">
                             <div class="icon_testi">
-                                <img src="./assets/img/icon_testi.png" alt="">
+                                <img src="../assets/img/icon_testi.png" alt="">
                             </div>
                             <div class="content_testi">
                                 <p class="description_text">Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non. </p>
@@ -406,7 +406,7 @@
                             <div class="info_valuer">
                                 <div class="info">
                                     <div class="avatar">
-                                        <img src="./assets/img/avatar_valuer.png" alt="">
+                                        <img src="../assets/img/avatar_valuer.png" alt="">
                                     </div>
                                     <div class="name">
                                         <p class="title_text">Janne Cooper</p>
@@ -414,7 +414,7 @@
                                 </div>
                                 <div class="evaluate">
                                     <div class="icon">
-                                        <img src="./assets/img/star.png" alt="">
+                                        <img src="../assets/img/star.png" alt="">
                                     </div>
                                     <p class="title_text">4.3</p>
                                 </div>
@@ -424,7 +424,7 @@
                     <div class="col-md-4">
                         <div class="box_detail_testi">
                             <div class="icon_testi">
-                                <img src="./assets/img/icon_testi.png" alt="">
+                                <img src="../assets/img/icon_testi.png" alt="">
                             </div>
                             <div class="content_testi">
                                 <p class="description_text">Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non. </p>
@@ -432,7 +432,7 @@
                             <div class="info_valuer">
                                 <div class="info">
                                     <div class="avatar">
-                                        <img src="./assets/img/avatar_valuer2.png" alt="">
+                                        <img src="../assets/img/avatar_valuer2.png" alt="">
                                     </div>
                                     <div class="name">
                                         <p class="title_text">Cobocannaeru</p>
@@ -440,7 +440,7 @@
                                 </div>
                                 <div class="evaluate">
                                     <div class="icon">
-                                        <img src="./assets/img/star.png" alt="">
+                                        <img src="../assets/img/star.png" alt="">
                                     </div>
                                     <p class="title_text">5</p>
                                 </div>
@@ -474,7 +474,7 @@
                                 <div class="small_box_article">
                                     <div class="box_feature_img">
                                         <div class="feature_photo">
-                                            <img src="./assets/img/article.png" alt="">
+                                            <img src="../assets/img/article.png" alt="">
                                         </div>
                                     </div>
                                     <div class="box_title_articles">
@@ -495,7 +495,7 @@
                                 <div class="small_box_article">
                                     <div class="box_feature_img">
                                         <div class="feature_photo">
-                                            <img src="./assets/img/article.png" alt="">
+                                            <img src="../assets/img/article.png" alt="">
                                         </div>
                                     </div>
                                     <div class="box_title_articles">
@@ -515,8 +515,8 @@
                                 </div>
                             </div>
                             <div class="box_button">
-                                <img class='a-left control-c btn_group prev slick-prev-article' src='./assets/img/arrow-left.png'>
-                                <img class='a-right control-c btn_group next slick-next-article' src='./assets/img/arrow-right.png'>
+                                <img class='a-left control-c btn_group prev slick-prev-article' src='../assets/img/arrow-left.png'>
+                                <img class='a-right control-c btn_group next slick-next-article' src='../assets/img/arrow-right.png'>
                             </div>
                         </div>
     
@@ -525,7 +525,7 @@
                                 <div class="box_blog row">
                                     <div class="col-5">
                                         <div class="blog_picture">
-                                            <img src="./assets/img/blog_demo.png" alt="Product">
+                                            <img src="../assets/img/blog_demo.png" alt="Product">
                                         </div>
                                     </div>
                                     
@@ -544,7 +544,7 @@
                                             
                                             <div class="author_blog">
                                                 <div class="author_avatar">
-                                                    <img src="./assets/img/avatar_author.png" alt="">
+                                                    <img src="../assets/img/avatar_author.png" alt="">
                                                 </div>
                                                 <a href=""><p class="title_text">By Jerremy Jean</p></a>
                                                 <p class="description_text date_create">Friday, 1 April 2022</p>
@@ -558,7 +558,7 @@
                                 <div class="box_blog row">
                                    <div class="col-5">
                                         <div class="blog_picture">
-                                            <img src="./assets/img/blog_demo2.png" alt="Product">
+                                            <img src="../assets/img/blog_demo2.png" alt="Product">
                                         </div>
                                    </div>
                                     
@@ -591,7 +591,7 @@
                                 <div class="box_blog row">
                                     <div class="col-5">
                                         <div class="blog_picture">
-                                            <img src="./assets/img/blog_demo.png" alt="Product">
+                                            <img src="../assets/img/blog_demo.png" alt="Product">
                                         </div>
                                     </div>
                                     
@@ -610,7 +610,7 @@
                                             
                                             <div class="author_blog">
                                                 <div class="author_avatar">
-                                                    <img src="./assets/img/avatar_author.png" alt="">
+                                                    <img src="../assets/img/avatar_author.png" alt="">
                                                 </div>
                                                 <p class="title_text">By Jerremy Jean</p>
                                                 <p class="description_text date_create">Friday, 1 April 2022</p>
@@ -629,7 +629,7 @@
                         <p class="title_text">Join with me to get special discount</p>
                     </div>
                     <div class="button_discount">
-                        <a href="" class="btn btn_group">Learn More <img src="./assets/img/arrow-right.png" alt=""></a>
+                        <a href="" class="btn btn_group">Learn More <img src="../assets/img/arrow-right.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -645,7 +645,7 @@
             <div class="container">
                 <div class="box_aboutus d-flex">
                     <div class="detail_aboutus">
-                        <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt=""></a>
                         <p class="description_text">Lalasia is digital agency that help you make better experience iaculis cras in.</p>
                     </div>
                     <div class="box_services">
@@ -687,13 +687,13 @@
         </div>
     </footer>
 
-    <script src="./assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
-    <script src="./assets/js/slick.min.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="./assets/js/all.min.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="../assets/js/slick.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/all.min.js"></script>
+    <script src="../assets/js/index.js"></script>
 </body>
 
 </html>
