--- a/Lalisa-page/assets/scss/product.scss
+++ b/Lalisa-page/assets/scss/product.scss
@@ -43,7 +43,14 @@
     font-size: 18px;
     font-weight: 700;
     line-height: 130%;
+
+    &:hover {
+        color:#518581;
+        background-color: #FFFFFF;
+        border: 2px solid #518581;
+    }
 }
+
 
 ////////////Start: Banner/////////
 .block_banner {
@@ -77,7 +84,8 @@
 
         .banner_pic {
             width: 100%;
-            height: 500px;
+            max-height: 500px;
+            overflow: hidden;
 
             img {
                 width: 100%;
@@ -122,7 +130,7 @@
             padding: 8px 16px;
         }
     }
-
+ 
     .title_banner {
         margin-top: 15px;
 
@@ -132,6 +140,7 @@
 
         .description_text {
             font-size: 24px;
+            color: #FFFFFF;
             margin-top: 20px;
         }
     }
@@ -171,6 +180,7 @@
     .filter_pic {
         width: 30px;
         height: 30px;
+        margin-right: 12px;
         
         img {
             width: 100%;
@@ -214,6 +224,10 @@
         align-items: center;
         border: 1.5px solid #F9F9F9;
         padding: 13px 20px;
+
+        .sortby_pic {
+            margin-right: 15px;
+        }
     }
 }
 
@@ -226,7 +240,8 @@
 
     .product_picture {
         width: 100%;
-        height: 360px;
+        max-height: 360px;
+        overflow: hidden;
 
         img {
             height: 100%;
@@ -281,10 +296,13 @@
         color: #151411;
         font-weight: 500;
         font-size: 18px;
+        line-height: 180%;
+        padding: 5px 15px;
     }
 }
 
 @media screen and (max-width:767px) {
+    
     .title_text {
         font-size: 40px;
     }
@@ -305,27 +323,32 @@
     .sort_by {
         display: none !important;
     }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+        display: none;
+    }
+
 }
 
 
 @media screen and (max-width:599px) {
 
-
-
     .block_title {
         font-size: 14px;
     }
+
     .title_text {
-        font-size: 26px;
+        font-size: 14px !important;
     }
 
     .description_text {
-        font-size: 14px;
+        font-size: 12px;
     }
     
     .btn_group {
         padding: 15px 26px;
-        font-size: 14px ;
+        font-size: 12px ;
     }
 
     .banner_title_text {
