--- a/Lalisa-page/views/product.html
+++ b/Lalisa-page/views/product.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lalasia</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
-    <link rel="stylesheet" href="./assets/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/slick.css">
-    <link rel="stylesheet" href="./assets/css/slick-theme.css">
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/slick.css">
+    <link rel="stylesheet" href="../assets/css/slick-theme.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./assets/css/product.css">
+    <link rel="stylesheet" href="../assets/css/product.css">
 
 </head>
 
@@ -21,9 +21,9 @@
         <div class="block_header">
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand" href="index.html"><img src="./assets/img/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="../assets/img/logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><img src="./assets/img/menu.png" alt=""></span>
+                        <span class="navbar-toggler-icon"><img src="../assets/img/menu.png" alt=""></span>
                     </button>
                     
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -44,10 +44,10 @@
                         <div class="my-2 my-lg-0">
                             <div class="options_navbar">
                                 <a class="icon_option" href="">
-                                    <img src="./assets/img/cart.png" alt="">
+                                    <img src="../assets/img/cart.png" alt="">
                                 </a>
                                 <a class="icon_option" href="">
-                                    <img src="./assets/img/user.png" alt="">
+                                    <img src="../assets/img/user.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                    <div class="swiper-wrapper">
                         <div class="small_banner swiper-slide">
                             <div class="banner_pic">
-                                <img src="./assets/img/banner_product.png" alt="">
+                                <img src="../assets/img/banner_product.png" alt="">
                             </div>
                             <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
                                 <div class="button_group">
@@ -91,7 +91,7 @@
                         </div>
                         <div class="small_banner swiper-slide">
                             <div class="banner_pic">
-                                <img src="./assets/img/banner_product.png" alt="">
+                                <img src="../assets/img/banner_product.png" alt="">
                             </div>
                             <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
                                 <div class="button_group">
@@ -106,7 +106,7 @@
                         </div>
                         <div class="small_banner swiper-slide">
                             <div class="banner_pic">
-                                <img src="./assets/img/banner_product.png" alt="">
+                                <img src="../assets/img/banner_product.png" alt="">
                             </div>
                             <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
                                 <div class="button_group">
@@ -129,17 +129,17 @@
             <div class="container">
                 <div class="banner_search">
                     <div class="search_icon">
-                        <img src="./assets/img/search_icon.png" alt="">
+                        <img src="../assets/img/search_icon.png" alt="">
                     </div>
                     <div class="input-group">
                         <input type="search" class="form-control rounded" placeholder="Search property"
                             aria-label="Search" aria-describedby="search-addon" />
-                        <button type="button" class="btn title_text btn_group">Search</button>
+                        <button type="button" class="btn btn_group">Search</button>
                     </div>
 
                     <div class="filter">
                         <div class="filter_pic">
-                            <img src="./assets/img/filter.png" alt="">
+                            <img src="../assets/img/filter.png" alt="">
                         </div>
                         <div class="fiter_text">
                             <p class="description_text">Filter</p>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="sort_by">
                         <div class="sortby_pic">
-                            <img src="./assets/img/sort.png" alt="">
+                            <img src="../assets/img/sort.png" alt="">
                         </div>
                         <div class="sort_text">
                             <p class="description_text">Sort By</p>
@@ -174,7 +174,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo1.png" alt="Product">
+                                    <img src="../assets/img/product_demo1.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Chair</p></a>
@@ -194,7 +194,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
+                                    <img src="../assets/img/product_demo3.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Cupboard </p></a>
@@ -214,7 +214,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo4.png" alt="Product">
+                                    <img src="../assets/img/product_demo4.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Chair </p></a>
@@ -234,7 +234,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo5.png" alt="Product">
+                                    <img src="../assets/img/product_demo5.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Table </p></a>
@@ -254,7 +254,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo6.png" alt="Product">
+                                    <img src="../assets/img/product_demo6.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Cupboard </p></a>
@@ -274,7 +274,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo7.png" alt="Product">
+                                    <img src="../assets/img/product_demo7.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Table </p></a>
@@ -294,7 +294,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo8.png" alt="Product">
+                                    <img src="../assets/img/product_demo8.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Decoration </p></a>
@@ -314,7 +314,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo9.png" alt="Product">
+                                    <img src="../assets/img/product_demo9.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Decoration </p></a>
@@ -334,7 +334,7 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo10.png" alt="Product">
+                                    <img src="../assets/img/product_demo10.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Decoration </p></a>
@@ -386,7 +386,7 @@
             <div class="container">
                 <div class="box_aboutus d-flex">
                     <div class="detail_aboutus">
-                        <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt=""></a>
                         <p class="description_text">Lalasia is digital agency that help you make better experience iaculis cras in.</p>
                     </div>
                     <div class="box_services">
@@ -428,13 +428,13 @@
         </div>
     </footer>
 
-    <script src="./assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./assets/js/slick.min.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="./assets/js/all.min.js"></script>
-    <script src="./assets/js/product.js"></script>
+    <script src="../assets/js/slick.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/all.min.js"></script>
+    <script src="../assets/js/product.js"></script>
 </body>
 
 </html>
